kubernetes/apps/flux-system/headlamp/app/HttpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app headlamp
  namespace: flux-system
  labels:
    gateway-label: internal-gateway
spec:
  hostnames:
    - "headlamp.local.dcunha.io"
  parentRefs:
    - name: internal-gateway
      namespace: default
  rules:
    - matches:
      backendRefs:
        - name: *app
          port: 80
